feat: add GC logging and parsing functionality; implement GcEvent and GcSummary classes; update ExcelExporter and ResultExporters for GC metrics